@@ -1,3 +1,7 @@
+2012-03-05  Takashi Kato  <ktakashi@ymail.com>
+
+	* src/os/win/thread.c (Sg_InternalThreadStart): fixed thread-terminate! related error on Windows.
+
 2012-02-11  Takashi Kato  <ktakashi@ymail.com>
 
 	* sitelib/text/csv.scm (text csv): added csv parse library.
